zed-extension/grammars/c4d/test/corpus/01-units.txt
==================
01-units
==================

# All three unit header forms plus nesting (D-01/D-02)
full: person "Customer" {
  description: The customer
}

typedled: system external "Payment" {
  technology: Datadog
}

typeonlyname: containerQueue "Raw Queue" {}

inner: box "Box" {
  nested: db "Nested DB" {}
  oneline: queue { }
}

---

(document
  (comment)
  (unit_block
    (unit_header
      id: (identifier)
      type: (type_keyword)
      name: (string))
    (field_statement
      key: (identifier)
      value: (bareword)))
  (unit_block
    (unit_header
      id: (identifier)
      type: (type_keyword)
      name: (string))
    (field_statement
      key: (identifier)
      value: (bareword)))
  (unit_block
    (unit_header
      id: (identifier)
      type: (type_keyword)
      name: (string)))
  (unit_block
    (unit_header
      id: (identifier)
      type: (type_keyword)
      name: (string))
    (unit_block
      (unit_header
        id: (identifier)
        type: (type_keyword)
        name: (string)))
    (unit_block
      (unit_header
        id: (identifier)
        type: (type_keyword)))))
